--- a/client/android/local.properties
+++ b/client/android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=/home/alan/Development/Android/
-flutter.sdk=/home/alan/Development/flutter
+sdk.dir=/home/mattia/Android/Sdk
+flutter.sdk=/home/mattia/Documents/flutter-sdk/flutter
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
