--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/logo.png
+    - images/user.png
     # - images/a_dot_burr.jpeg
     #- images/a_dot_ham.jpeg
 
