added bubbles to chat and messagebar

--- a/client/android/local.properties
+++ b/client/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/home/lorenzo/Android/Sdk
-flutter.sdk=/home/lorenzo/Downloads/flutter_linux_3.22.2-stable/flutter
+sdk.dir=/home/marco/Android/Sdk
+flutter.sdk=/home/marco/flutter-sdk/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
