--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   chat_bubbles: ^1.6.0
+  window_manager: ^0.3.9
 
 dev_dependencies:
   flutter_test:
