change setting button in settingpage.dart

--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
     - images/user.png             #login page image
     - images/default_profile.png  #default_profile image
     - images/add_server.png       #add server image
+    - images/chat_settings.png    #chat preferences image
     # - images/a_dot_burr.jpeg
     #- images/a_dot_ham.jpeg
 
