--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - images/default_profile.png  #default_profile image
     - images/add_server.png       #add server image
     - images/chat_settings.png    #chat preferences image
+    - images/language.png
     # - images/a_dot_burr.jpeg
     #- images/a_dot_ham.jpeg
 
