--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.8.4+4
+  flutter_colorpicker: ^1.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -68,6 +69,7 @@ flutter:
     - images/add_server.png       #add server image
     - images/chat_settings.png    #chat preferences image
     - images/language.png
+    - images/background.png
     # - images/a_dot_burr.jpeg
     #- images/a_dot_ham.jpeg
 
