--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   chat_bubbles: ^1.6.0
   window_manager: ^0.3.9
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
