fixed database for chat

--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   window_manager: ^0.3.9
   sqflite: ^2.3.3+1
   sqflite_common_ffi: ^2.3.3
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
