--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   image_picker: ^0.8.4+4
   flutter_colorpicker: ^1.0.3
+  url_launcher: ^6.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
