--- a/client/ios/Flutter/Generated.xcconfig
+++ b/client/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/home/alan/Development/flutter
-FLUTTER_APPLICATION_PATH=/home/alan/Documents/SynapseChat/client
+FLUTTER_ROOT=/home/lorenzo/Downloads/flutter_linux_3.22.2-stable/flutter
+FLUTTER_APPLICATION_PATH=/home/lorenzo/development/SynapseChat/client
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib/main.dart
 FLUTTER_BUILD_DIR=build
