--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   sqflite: ^2.3.3+1
   sqflite_common_ffi: ^2.3.3
   get: ^4.6.6
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
