--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   sqflite_common_ffi: ^2.3.3
   get: ^4.6.6
   visibility_detector: ^0.4.0+2
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +63,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
