--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  pointycastle: ^3.1.1
+  crypto: ^3.0.3
   image_picker: ^0.8.4+4
   flutter_colorpicker: ^1.0.3
   url_launcher: ^6.3.0
@@ -46,6 +48,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
