--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
     sdk: flutter
   intl: any
   flutter_secure_storage: ^4.2.1
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
