--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   pointycastle: ^3.1.1
   crypto: ^3.0.3
-  image_picker: ^0.8.4+4
+  image_picker: ^1.1.2
   flutter_colorpicker: ^1.0.3
   url_launcher: ^6.3.0
 
@@ -60,7 +60,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
