--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   image_picker: ^1.1.2
   flutter_colorpicker: ^1.0.3
   url_launcher: ^6.3.0
-
+  font_awesome_flutter: ^10.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
