--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   url_launcher: ^6.3.0
   font_awesome_flutter: ^10.1.0
+
+  web_socket_channel: ^2.1.0
+  provider: ^6.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
