--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   url_launcher: ^6.3.0
   font_awesome_flutter: ^10.1.0
-
+  flutter_svg: ^1.0.0
   web_socket_channel: ^2.1.0
   provider: ^6.0.0
   # The following adds the Cupertino Icons font to your application.
@@ -89,6 +89,7 @@ flutter:
     - images/background.png
     - images/info.png
     - images/background_chat.png
+    - images/error.svg
     # - images/a_dot_burr.jpeg
     #- images/a_dot_ham.jpeg
 
